# uarray

./: .clang-format  .coveragerc  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FFT.ipynb  Lazy NDarray.ipynb  MANIFEST.in  Python Nested Arrays.ipynb  README.md  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  azure-pipelines.yml  doc8.ini  environment.yml  log likelihood.ipynb  meson.build  mypy.ini  pyproject.toml  pytest.ini  readthedocs.yml  requirements.dev.txt  requirements.txt  setup.cfg  setup.py  test_uarray.py  uarray.py  uarray.toml  udispatch.toml  umoa.toml  umoa_parser.toml  unumpy.toml  uvisualize.toml  versioneer.py
.conda/: build.sh  environment.yml  environment3.5.yml  environment3.6.yml  environment3.7.yml  meta.yaml
.github/workflows/: build.yaml
.nix/: README.md  build.nix  shell.nix
benchmarks/: 1000-reduced.json  1050-original.json  1100-original.json  1100-reduced.json  1150-original.json  1150-reduced.json  1200-original.json  1250-original.json  1300-original.json  1350-original.json  1400-original.json  1450-original.json  150-reduced.json  1500-original.json  1500-reduced.json  200-reduced.json  250-reduced.json  300-original.json  350-original.json  350-reduced.json  450-reduced.json  50-original.json  500-original.json  550-reduced.json  600-original.json  650-original.json  700-original.json  700-reduced.json  750-original.json  750-reduced.json  800-reduced.json  850-original.json  850-reduced.json  950-original.json  Untitled.ipynb
binder/: environment.yml  postBuild  requirements.txt
ci/: azure-doc-lint-cov.yml  azure-pypy3.yml  azure-run-clang-format.yml  azure-steps-macos.yml  azure-steps-windows.yml  azure-steps.yml  azure-test-scipy-fft.yml
docs/: conf.py  design_doc.rst  end_user_docs.rst  enduser_docs.rst  getting_started.rst  glossary.rst  gsoc2020_ideas.rst  index.rst  libauthor_docs.rst  multimethod_docs.rst  unumpy_using.rst
jagged-array/: jagged.py
jagged-array/tests/: test_jagged.py
notebooks/: 01_user_facing.ipynb  02_basic_dev_tutorial.ipynb  2018.10.25 Einsum Numpy.ipynb  2018.10.31 Numpy Einsum Exploration.ipynb  2018.11.02 Adding Reverse.ipynb  2018.11.09 Meeting.py  2018.11.09 Quasiquotes.py  2018.11.11 Test Core.py  2018.11.19 Backend API.py  2018.11.20 Different Types.py  2018.11.20 PyData Presentation.ipynb  2018.12.02 mtypes notes.py  2018.12.04 Types from func.py  2018.12.04 matchpy same equal var.py  2018.13.04 AST from function.py  Broadcasting Timing.ipynb  Lazy NDarray.ipynb  MoA Demo.ipynb  Native.ipynb  NumPy Broadcasting.ipynb  NumPy Compat.ipynb  Numpy Array.ipynb  Paper Problem.ipynb  Python Nested Arrays.ipynb  Stages.ipynb  Symbolic and Numeric.ipynb  Transpose Test.ipynb  Uarray Parser.ipynb  Uarray Visualization.ipynb  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  _ufl example.ipynb  basic_tutorial.ipynb  log likelihood.ipynb
requirements/: all.txt  backends.txt  docs.txt  tests.txt
src/: CMakeLists.txt  _uarray_dispatch.cxx
src/uarray/: __init__.py  _backend.py  _uarray.pyi  _version.pyi  meson.build  version.pyi
stubs/matchpy/: __init__.pyi
symarray/: README.md
symarray/symarray/: __init__.py  arrays.py  dummyarray.py  integers.py  ints.py  scalars.py  shape.py  symbol_generator.py
tests/: conftest.py
tools/: gitversion.py  write_and_get_version.py
uarray/: .gitignore  2018.11.02 Adding Reverse.ipynb  2018.11.02 Transpose and Reverse.ipynb  2018.11.09 Meeting 2.py  2018.11.15 PyData Presentation.ipynb  Cross Product.ipynb  Intro.ipynb  Manual Compiling.ipynb  NumPy Broadcasting.ipynb  NumPy Compat.ipynb  NumPy Tranpose.ipynb  README.md  Transpose Test.ipynb  __init__.py  _backend.py  _matchpy duplicate matching.ipynb  _matchpy get variable na,e.ipynb  _python_support.h  _typing.pyi  _uarray.py  _uarray.pyi  _uarray_dispatch.cxx  _version.py  abstractions.py  abstractions_test.py  arrays.py  arrays_test.py  ast.py  ast_higher.py  ast_types.py  backend.py  booleans.py  conftest.py  core.py  core_test.py  core_types.py  environment.yml  extract_readme_tests.py  ideas.txt  lazy_ndarray.py  (+31 more)
uarray.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
uarray/backend/: __init__.py
uarray/benchmarks/: 100-original.json  100-reduced.json  1000-original.json  1050-reduced.json  1200-reduced.json  1250-reduced.json  1300-reduced.json  1350-reduced.json  1400-reduced.json  1450-reduced.json  150-original.json  1550-original.json  1550-reduced.json  200-original.json  250-original.json  300-reduced.json  400-original.json  400-reduced.json  450-original.json  50-reduced.json  500-reduced.json  550-original.json  600-reduced.json  650-reduced.json  800-original.json  900-original.json  900-reduced.json  950-reduced.json  Makefile  Untitled.ipynb
uarray/core/: __init__.py  abstractions.py  abstractions_test.py  arrays.py  arrays_test.py  booleans.py  cartesian_category.py  cartesian_closed_category.py  category.py  context.py  equality.py  functions.py  lists.py  naturals.py  naturals_test.py  new.py  pairs.py  unify.py  vectors.py  vectors_test.py
uarray/dispatch/: __init__.py  contextmanagers.py  core.py  operations.py  replacement.py  singleton.py  singleton_test.py  spec.py  visualize.py
uarray/native/: abstract.py  helpers.py  moa.py  numpy.py  typing.py
uarray/notebooks/: Cross Product.ipynb
uarray/numpy/: __init__.py  arrays.py  arrays_test.py  ast.py  ast_test.py  lazy_ndarray.py  mutable_arrays.py  ufuncs.py  ufuncs_test.py
udispatch/: __init__.py  contextmanagers.py  replacement.py
ulinalg/: __init__.py  methods.py  multimethods.py  numpy_backend.py  pytorch_backend.py  torch_backend.py
umoa/: __init__.py  moa.py  moa_test.py
umoa_parser/: __init__.py  lexer.py  yaccer.py
unumpy/: __init__.py  arrays.py  arrays_test.py  ast.py  ast_test.py  cupy_backend.py  dask_backend.py  lazy_ndarray.py  multimethods.py  mutable_arrays.py  numpy_backend.py  optimize.py  optimize_test.py  pytorch_backend.py  sparse_backend.py  torch_backend.py  xnd_backend.py
uvisualize/: __init__.py  plugin.py  visualize.py
(+39 files in other folders)
