[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]

[tool.black]
exclude = 'uarray/_version.py'

[tool.setuptools_scm]
write_to = "uarray/_version.py"

[tool.mypy]
show_error_codes = true
no_implicit_reexport = true
disallow_any_unimported = true

[[tool.mypy.overrides]]
module = [
    "pytest_black.*",
]
ignore_missing_imports = true
disallow_any_unimported = false

[tool.cibuildwheel]
build = "{cp3{8..10}-*,pp3{8..9}-*}"
build-frontend = "build"
test-command = "pip install -r {project}/requirements/tests.txt && pytest --pyargs uarray"

[tool.cibuildwheel.macos]
archs = ["x86_64", "universal2"]
