[build-system]
requires = ["scikit-build-core", "setuptools_scm>=8"]
build-backend = "scikit_build_core.setuptools.build_meta"

[project]
name = "uarray"
dynamic = ["version"]
description = "Array interface object for Python with pluggable backends and a multiple-dispatch mechanism for defining down-stream functions"
readme = "README.md"
dependencies = []
maintainers = [{ name = "Hameer Abbasi", email = "habbasi@openteams.com" }]
requires-python = ">=3.11"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
keywords = ["uarray", "scipy", "multiple-dispatch"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Typing :: Typed",
]

[tool.setuptools_scm]
version_file = "src/uarray/_version.py"

[tool.scikit-build]
wheel.packages = ["src/uarray"]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["src/package/_version.py"]

[project.urls]
Documentation = "https://uarray.org/"
Source = "https://github.com/Quansight-Labs/uarray/"
Repository = "https://github.com/Quansight-Labs/uarray.git"
"Issue Tracker" = "https://github.com/Quansight-Labs/uarray/issues"

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx_rtd_theme",
]
tests = [
    "pytest>=3.5",
    "pytest-flake8",
    "pytest-cov",
    "mypy>=0.930",
]
optional = []
all = [
    "uarray[docs]",
    "uarray[tests]",
    "uarray[optional]",
]

[tool.mypy]
show_error_codes = true
no_implicit_reexport = true
disallow_any_unimported = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
disallow_any_unimported = false

[tool.cibuildwheel]
build = "{cp3{11..14}-*,cp3{13..14}t-*}"
build-frontend = "build"
enable = ["cpython-freethreading"]
before-test = "pip install -r {project}/requirements/tests.txt"
test-command = "pytest --pyargs uarray"

[tool.cibuildwheel.macos]
archs = ["universal2"]

[[tool.cibuildwheel.overrides]]
select = "*-macosx_*"
inherit.environment = "append"
environment.MACOSX_DEPLOYMENT_TARGET = "10.15"

[tool.cibuildwheel.config-settings]
"cmake.verbose" = true
"logging.level" = "INFO"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.feature.all.dependencies]
pip = "*"

[tool.pixi.pypi-dependencies]
uarray = { path = "." }

[tool.pixi.environments]
default = { solve-group = "default" }
all = { features = ["all", "docs", "tests", "optional"], solve-group = "default" }
docs = { features = ["docs"], solve-group = "default" }
optional = { features = ["optional"], solve-group = "default" }
tests = { features = ["tests"], solve-group = "default" }

[tool.pixi.tasks]
